# SARK100

./: .flake8  .gitignore  MANIFEST.in  README.md  build_and_deploy.sh  example.py  pyproject.toml  requirements.txt  setup.py
pysark100/: __init__.py  _version.py  bands.py  collector.py
pysark100/cli/: sark100.py
tests/: test_pysark100.py
